Assert selecting UVs #69941

Closed
opened 2019-09-16 13:37:12 +02:00 by Philipp Oeser · 5 comments
Member

System Information
Operating system: Linux-5.2.8-200.fc30.x86_64-x86_64-with-fedora-30-Thirty 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.26

Blender Version
Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-16 08:51, hash: 94ecad5809
Worked: (optional)

Short description of error
Selecting UVs in the UV Editor will often assert
BLI_assert failed: /blender/source/blender/draw/intern/draw_cache_impl_mesh.c:1328, DRW_mesh_batch_cache_create_requested(), at '!DRW_batch_requested(((GPUBatch **)&cache->batch)- [x], 0)'

Exact steps for others to reproduce the error
from the default cube:

  • switch to UV Editing workspace
  • either load an Image, then select a UV OR
  • zoom in or out, then select a UV
  • boom
**System Information** Operating system: Linux-5.2.8-200.fc30.x86_64-x86_64-with-fedora-30-Thirty 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.26 **Blender Version** Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-16 08:51, hash: `94ecad5809` Worked: (optional) **Short description of error** Selecting UVs in the UV Editor will often assert `BLI_assert failed: /blender/source/blender/draw/intern/draw_cache_impl_mesh.c:1328, DRW_mesh_batch_cache_create_requested(), at '!DRW_batch_requested(((GPUBatch **)&cache->batch)- [x], 0)'` **Exact steps for others to reproduce the error** from the default cube: - switch to `UV Editing` workspace - either load an Image, then select a UV OR - zoom in or out, then select a UV - boom
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Author
Member

Added subscriber: @fclem

Added subscriber: @fclem
Author
Member

@fclem: I havent done any detective work yet, does this ring a bell for you?
(it sounds worrying, not sure though if this is rather harmless...)

@fclem: I havent done any detective work yet, does this ring a bell for you? (it sounds worrying, not sure though if this is rather harmless...)

This issue was referenced by 7bbdc6996a

This issue was referenced by 7bbdc6996a71612b719053e62a9f753a3852e215

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Clément Foucault self-assigned this 2019-09-27 17:19:15 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69941
No description provided.